--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
 header {
 	width: 100%;
 	height: 100%;
-	background: url("../../images/bg_1.jpg") center/cover no-repeat;
+	background: url("../images/bg_1.jpg") center/cover no-repeat;
 }
 
 @media (max-width: 768px) {
@@ -583,7 +583,7 @@ header {
 	justify-content: center;
 }
 .shop .shop__overlay::before {
-	content: url("../../images/icons/bicycle_icon.png");
+	content: url("../images/icons/bicycle_icon.png");
 	max-width: 51px;
 	max-height: 30px;
 	object-fit: contain;
